[gd_scene load_steps=13 format=3 uid="uid://cor2s0svaqrii"]

[ext_resource type="Script" path="res://Scenes/Objects/Level/launch_pad.gd" id="1_nhp1a"]
[ext_resource type="Texture2D" uid="uid://bgj38f36f3ngh" path="res://Resources/Textures/LaunchPad(AddinSachen.png" id="2_5l4hp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_omstg"]
atlas = ExtResource("2_5l4hp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwgb0"]
atlas = ExtResource("2_5l4hp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdxg4"]
atlas = ExtResource("2_5l4hp")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tsar"]
atlas = ExtResource("2_5l4hp")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_685dj"]
atlas = ExtResource("2_5l4hp")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l58ri"]
atlas = ExtResource("2_5l4hp")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqlpr"]
atlas = ExtResource("2_5l4hp")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_boy8s"]
atlas = ExtResource("2_5l4hp")
region = Rect2(192, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_atgpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omstg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_pwgb0")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_hdxg4")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6tsar")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_685dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l58ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqlpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boy8s")
}],
"loop": false,
"name": &"pressed",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7ypf"]
size = Vector2(30, 10)

[node name="LaunchPad" type="Area2D"]
script = ExtResource("1_nhp1a")

[node name="Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_atgpx")
animation = &"pressed"
autoplay = "default"
frame = 6
frame_progress = 1.0

[node name="LaunchDelay" type="Timer" parent="."]
one_shot = true

[node name="ActivationShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_i7ypf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaunchDelay" to="." method="_on_launch_delay_timeout"]
